--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+.DS_Store
+
+# Idea
+.idea/
+*.iml
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+bin/*
+/xenginecore
 
 # Test binary, built with `go test -c`
 *.test
@@ -17,5 +22,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
-go.work
+.env
+.docker_build/
+
+tmp/
